@@ -1,1 +1,12 @@
 # Insight_Hub
+
+## First download the jar files And save into one folder.
+
+# Then Clone The Repo In to The Terminal .
+
+# Then Copy that path and paste on place of "The javafx Path" .
+
+# After that Run that command 1 Then command 2 in the terminal .
+
+## COMMAND 1-   javac --module-path "The javafx Path " --add-modules javafx.controls,javafx.fxml DataAnalysisVisualization.java  
+## COMMAND 2-   java --module-path "The javafx Path " --add-modules javafx.controls,javafx.fxml DataAnalysisVisualization  
